--- a/templates/appointa/index.ejs
+++ b/templates/appointa/index.ejs
@@ -43,9 +43,9 @@
         <div class="blankHXS"></div>
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="APPOINTA">
+      <img class="displayMobile" src="MockupXS.png" alt="APPOINTA">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/0APvIwRfsXK7XTGaBXhD05/APPOINTA?page-id=1713%3A9427&node-id=1714%3A9456&viewport=677%2C117%2C0.12&scaling=scale-down&starting-point-node-id=1714%3A9456" target="_blank"> <button class="button-35 APPOINTA">Slide Deck</button></a>
         <div class="blankHXS"></div>
