--- a/templates/babyquip/index.ejs
+++ b/templates/babyquip/index.ejs
@@ -129,9 +129,9 @@
     </div>
 
 
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
 
-      <img class="displayPhone" src="image_mobile.png" alt="APPOINTA">
+      <img class="displayMobile" src="image_mobile.png" alt="APPOINTA">
       <div class="ProjectBannerInnerND">
         <div class="blankHS"></div>
         <h2 class="colorWhite">GEAR RENTAL</h2>
