--- a/templates/design_system/navigation/V3/index.ejs
+++ b/templates/design_system/navigation/V3/index.ejs
@@ -39,9 +39,9 @@ pageURL:'design_system/navigation/V3/', thumbnailImgURL: 'vickywang_web.png'
           <div class="blankHXS"></div>
         </div>
       </div>
-      <div class="ProjectBanner displayPhone">
+      <div class="ProjectBanner displayMobile">
         <div class="blankMin1880"></div>
-        <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
+        <img class="displayMobile" src="MockupXS.png" alt="vickywang.me">
         <div class="ProjectBannerInnerND">
           <h1 class=""><strong>Navigation design V3</strong> </h1>
           <h3 class="Grid Grid--center colorBlack">Please scroll down and click to view the behavior</h3>
