--- a/templates/design_system/navigation/index.ejs
+++ b/templates/design_system/navigation/index.ejs
@@ -41,9 +41,9 @@ pageURL:'design_system/navigation/', thumbnailImgURL: 'vickywang_web.png'
 
         </div>
       </div>
-      <div class="ProjectBanner displayPhone">
+      <div class="ProjectBanner displayMobile">
         <div class="blankMin1880"></div>
-        <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
+        <img class="displayMobile" src="MockupXS.png" alt="vickywang.me">
         <div class="ProjectBannerInnerND">
           <h1 class=""><strong>Navigation Design</strong> </h1>
           <h3 class="Grid Grid--center colorBlack">Enhancing the readability of UX projects</h3>
