--- a/templates/glorify/index.ejs
+++ b/templates/glorify/index.ejs
@@ -61,9 +61,9 @@
         <div class="blankHXS"></div>
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="GLORIFY">
+      <img class="displayMobile" src="MockupXS.png" alt="GLORIFY">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="Logo_Glorify.png" alt="GLORIFY">
 
@@ -296,10 +296,10 @@
           </div>
           <!-- displayTablet -->
 
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
 
           <div class="element">
             <h4> Quick start group prayer</h4>
@@ -316,10 +316,10 @@
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
 
           <div class="element">
             <h4> Customized group prayer</h4>
@@ -336,10 +336,10 @@
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
 
           <div class="element">
             <h4> Join group prayer</h4>
@@ -371,10 +371,10 @@
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
           <div class="element">
             <h4> Hi-fi prototype </h4>
           </div>
@@ -389,10 +389,10 @@
             <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
           <div class="element">
             <h4> Enhancement </h4>
           </div>
@@ -3899,10 +3899,10 @@
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Previous version
                       </h4>
@@ -3918,10 +3918,10 @@
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Current version
                       </h4>
@@ -3944,10 +3944,10 @@
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Previous version
                       </h4>
@@ -3963,10 +3963,10 @@
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Current version
                       </h4>
@@ -4726,10 +4726,10 @@
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
               </div>
               <!-- displayTablet -->
-              <div class="element displayPhone progress">
+              <div class="element displayMobile progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
               </div>
-              <!-- displayPhone -->
+              <!-- displayMobile -->
               <div class="element">
                 <h4> Hi-fi prototype </h4>
               </div>
@@ -4744,10 +4744,10 @@
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
               </div>
               <!-- displayTablet -->
-              <div class="element displayPhone progress">
+              <div class="element displayMobile progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
               </div>
-              <!-- displayPhone -->
+              <!-- displayMobile -->
               <div class="element">
                 <h4> Enhancement </h4>
               </div>
