--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -575,7 +575,7 @@
             <a href="/design_system/">
               <img class="displayDesktop" src="/projectImages/site25_desktop.svg" alt="Design System">
               <img class="displayTablet" src="/projectImages/site25_tablet.svg" alt="Design System">
-              <img class="displayPhone" src="/projectImages/site25_mobile.svg" alt="Design System">
+              <img class="displayMobile" src="/projectImages/site25_mobile.svg" alt="Design System">
             </a>
           </div>
         </div>
