--- a/templates/shared/block_bannerNoButton.ejs
+++ b/templates/shared/block_bannerNoButton.ejs
@@ -58,9 +58,9 @@
     </div>
   
   
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
   
-      <img class="displayPhone" src="<%- bannerMockupS %>" alt="APPOINTA">
+      <img class="displayMobile" src="<%- bannerMockupS %>" alt="APPOINTA">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
         <h2><strong><%= bannerTitle %></strong> </h2>
