--- a/templates/worklog/mobile_landing/index.ejs
+++ b/templates/worklog/mobile_landing/index.ejs
@@ -513,13 +513,13 @@
             </h3>
             <h4>As a UX designer with hands-on startup experience, I’m involved in every design stage. My focus is on creating effective, straightforward user experiences that align with business objectives.
             </h4>
-            <div class="blankHXXS displayPhone"></div>
+            <div class="blankHXXS displayMobile"></div>
 
             <h3 class="fontWeight400">Craftsmanship & Product Impact
             </h3>
             <h3>I’m driven by a passion for quality design, aiming to create products that not only look great but also achieve business success through thoughtful, user-centered details.
             </h3>
-            <div class="blankHXXS displayPhone"></div>
+            <div class="blankHXXS displayMobile"></div>
 
             <h3 class="fontWeight400">Embracing Technology
             </h3>
