--- a/templates/workroom/index.ejs
+++ b/templates/workroom/index.ejs
@@ -42,7 +42,7 @@
           <h1 class="specialTextTitleMidLine fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
           <h1 class="specialTextTitle fontWeight700">for businesses & users.</h1>
         </div>
-        <div class="element displayPhone">
+        <div class="element displayMobile">
           <div class="element">
             <h1 class="t-hello"> 👋🏻 hello, I'm Vicky</h1>
             <div class="spacingSmall"></div>
@@ -148,7 +148,7 @@
       </div>
     </div>
   </div>
-  <div class="wrapper displayPhone">
+  <div class="wrapper displayMobile">
     <div class="Grid Grid--full Grid--gutters">
       <div class="element">
         <a href="/resume2025"> <button class="buttonLarge buttonPrimary bgVWGrey">Resume & Experience
@@ -754,13 +754,13 @@
             </h3>
             <h4>As a UX designer with hands-on startup experience, I’m involved in every design stage. My focus is on creating effective, straightforward user experiences that align with business objectives.
             </h4>
-            <div class="blankHXXS displayPhone"></div>
+            <div class="blankHXXS displayMobile"></div>
 
             <h3 class="fontWeight400">Craftsmanship & Product Impact
             </h3>
             <h3>I’m driven by a passion for quality design, aiming to create products that not only look great but also achieve business success through thoughtful, user-centered details.
             </h3>
-            <div class="blankHXXS displayPhone"></div>
+            <div class="blankHXXS displayMobile"></div>
 
             <h3 class="fontWeight400">Embracing Technology
             </h3>
