--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -51,9 +51,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupS.png" alt="vickywang.me">
+      <img class="displayMobile" src="MockupS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
         <h1><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Click, hover, or adjust the viewport to observe the responsive layout
