--- a/templates/design_system/navigation/V1/index.ejs
+++ b/templates/design_system/navigation/V1/index.ejs
@@ -43,9 +43,9 @@ pageURL:'design_system/navigation/V1/', thumbnailImgURL: 'vickywang_web.png'
 
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
+      <img class="displayMobile" src="MockupXS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
         <h1 class=""><strong>Navigation design V1</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Please scroll down and click to view the behavior</h3>
