--- a/templates/shared/comp_card25.ejs
+++ b/templates/shared/comp_card25.ejs
@@ -11,7 +11,7 @@
 
 
 <div class="wrapper">
-  <div class="card card25">
+  <div class="card">
     <div class="card__left">
       <p class="card25CardMeta"><%= cardMeta %></p>
       <h2 class="card25CardTitle"><%= cardTitle %></h2>
@@ -28,6 +28,7 @@
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium <%= ctaType %>">View Case Study</button>
         </a>
+
         <!-- Modal 1 -->
         <div id="modal1" class="modal hidden">
           <span class="modal-close">
