--- a/templates/shared/projectLanding.ejs
+++ b/templates/shared/projectLanding.ejs
@@ -28,9 +28,9 @@
 
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="vickywang.me">
+      <img class="displayMobile" src="MockupXS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
         <h1><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Click, hover, or adjust the viewport to observe the responsive layout
