--- a/templates/shared/comp_card25.ejs
+++ b/templates/shared/comp_card25.ejs
@@ -1,10 +1,17 @@
-
 <%
   cardMeta     = (typeof cardMeta !== 'undefined') ? cardMeta: '';
   cardTitle      = (typeof cardTitle !== 'undefined') ? cardTitle: '';
   cardDescription  = (typeof cardDescription !== 'undefined') ? cardDescription: '';
-  cardList   = (typeof cardList !== 'undefined') ? cardList: '';
+  cardList1   = (typeof cardList1 !== 'undefined') ? cardList1: '';
+  cardList2   = (typeof cardList2 !== 'undefined') ? cardList2: '';
+  cardList3   = (typeof cardList3 !== 'undefined') ? cardList3: '';
+
   ctaType   = (typeof ctaType !== 'undefined') ? ctaType: '';
+  ctaName   = (typeof ctaName !== 'undefined') ? ctaName: '';
+
+  withCTA   = (typeof withCTA !== 'undefined') ? withCTA: '';
+    imgURL   = (typeof imgURL !== 'undefined') ? imgURL: '';
+
 
 %>
 
@@ -16,17 +23,18 @@
       <p class="card25CardMeta"><%= cardMeta %></p>
       <h2 class="card25CardTitle"><%= cardTitle %></h2>
       <h5 class="card25CardDescription"><%= cardDescription %></h5>
-
-      <h5 class="card25CardList"><%= cardList %></h5>
+      <h5 class="card25CardList"><%= cardList1 %></h5>
+      <h5 class="card25CardList"><%= cardList2 %></h5>
+      <h5 class="card25CardList"><%= cardList3 %></h5>
       <div class="spacingLarge displayDesktop"></div>
       <div class="spacingLarge displayTablet"></div>
 
       <div class="spacingSmall displayMobile"></div>
 
-      <div class="">
+      <div class="<%= withCTA %>">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
-          <button class="buttonMedium <%= ctaType %>">View Case Study</button>
+          <button class="buttonMedium <%= ctaType %>"><%= ctaName %></button>
         </a>
 
         <!-- Modal 1 -->
@@ -61,7 +69,7 @@
 
     <div class="card__right">
       <div class="card25-media">
-        <img src="/projectImages/cover_bq_inventory_management.png" alt="" class="card25-media-img" />
+        <img src="<%= imgURL %>" alt="project image" class="card25-media-img" />
       </div>
     </div>
   </div>
